--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,8 @@ body{
   }
 
   .carousel-item {
-      height:500px
+      height:500px;
+      /* margin-bottom: 10px; */
   }
 
   .carousel-item img {
@@ -51,8 +52,12 @@ body{
 
   }
 .martop{
-    margin-top: 50px;
+    margin-top: 30px;
 }
+
+/* .martop2{
+    margin-top: 30px;
+} */
 
 .marsearch{
     margin-top: 50px;
@@ -60,3 +65,8 @@ body{
     font-family: 'JetBrains Mono', monospace;
 }
 
+.btnbtnBtnWarning{
+    align-content: center;
+    margin-top: 0px;
+    color:#bc0e29
+}
