--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;1,400;1,600;1,800&display=swap');
+
 #mainimage {
     width: 100%;
     height: 100vh;
@@ -9,15 +11,21 @@ body{
     font-family: 'JetBrains Mono', monospace;
 }
 
-#center {
-    margin-left: 35%;
-}
+.form-control::-webkit-input-placeholder {
+    color: black;
+    margin-left: 50%;
+  }
 
-/* #search-input {
+#search-input {
     width: 15vw;
-    text-align: center;
-    box-shadow: 2px 2px 10px 1px black;
-} */
+    background-color:#f0ff00;
+    font-family: 'JetBrains Mono', monospace;
+    border: 3px solid #ffffff;
+    color: black;
+    letter-spacing: 5px;
+    font-weight: 800;
+    padding: 0;
+}
 
 .image {
     opacity: 1;
@@ -33,40 +41,70 @@ body{
 .image:hover {
     opacity: 0.3;
     cursor: pointer;
+    font-family: 'JetBrains Mono', monospace;
   }
 
-  .carousel-inner{
-      background-color:#bc0e29
+.carousel-inner{
+      background-color:#bc0e29;
+      font-family: 'JetBrains Mono', monospace;
   }
 
-  .carousel-item {
-      height:500px;
+.carousel-item {
+      height:550px;
       /* margin-bottom: 10px; */
+      font-family: 'JetBrains Mono', monospace;
   }
 
-  .carousel-item img {
+.carousel-item img {
       margin:0 auto;
       min-height: 500px;
       height:300px;
       object-fit: cover;
-
+      font-family: 'JetBrains Mono', monospace;
   }
-.martop{
-    margin-top: 30px;
-}
 
-/* .martop2{
-    margin-top: 30px;
-} */
+.center {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+  }
+
+.martop{
+    margin-top: 100px;
+    font-family: 'JetBrains Mono', monospace; 
+    max-height: 300px;
+    margin-bottom: 100px;
+}
 
 .marsearch{
     margin-top: 50px;
-    align-content: center;
+    justify-content: center;
     font-family: 'JetBrains Mono', monospace;
+
 }
 
-.btnbtnBtnWarning{
+.btn{
     align-content: center;
-    margin-top: 0px;
-    color:#bc0e29
+    margin-top:15px;
+    background-color:#f0ff00;
+    font-family: 'JetBrains Mono', monospace; 
+    border: 3px solid #ffffff;
+    letter-spacing: 5px;
+
+}
+
+@media only screen and (max-width: 1280px) {
+    .martop {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+}
+
+@media only screen and (max-width: 1024) {
+    .martop {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
 }
