--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,25 +1,72 @@
-body {
-    margin-top: 5rem;
+.main-content {
     font-family: 'JetBrains Mono', monospace;
-    text-align: center
+    text-align: center;
+    margin-top: 7rem;
 }
 
 h2 {
-    font-weight: 600;
+    font-weight: 800;
+    width: 100%;
+    /* text-align: right; */
+    /* margin-top: 7rem; */
+    /* margin-bottom: -1rem; */
 }
 
 img {
     overflow: hidden;
     max-width:100%;
     max-height:100%;
+    /* position: relative; */
+    z-index:-1;
 }
 
 .shoe-info {
   padding-top: 4rem;
-  line-height: 3;
+  line-height: 2.3;
   font-size: large;  
 }
 
 #desc {
     margin-top: 3rem;
+}
+
+
+
+/* Ratings */
+
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center
+}
+
+.rating>input {
+    display: none
+}
+
+.rating>label {
+    position: relative;
+    width: 1em;
+    font-size: 6vw;
+    color: #FFD600;
+    cursor: pointer
+}
+
+.rating>label::before {
+    content: "\2605";
+    position: absolute;
+    opacity: 0
+}
+
+.rating>label:hover:before,
+.rating>label:hover~label:before {
+    opacity: 1 !important
+}
+
+.rating>input:checked~label:before {
+    opacity: 1
+}
+
+.rating:hover>input:checked~label:before {
+    opacity: 0.4
 }
