--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,61 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;1,400;1,600;1,800&display=swap');
 
-#mainimage {
-    width: 100%;
-    height: 100vh;
-
+.logo {
+    padding: 4rem;
+    margin-top: -1.5rem;
 }
-body{
+
+body {
     background-image: url("../assets/background/back2.png");
     background-size: cover;
     font-family: 'JetBrains Mono', monospace;
 }
 
-.float-center {
-    float: center!important;
-}
 .form-control::-webkit-input-placeholder {
     color: black;
-    margin-left: 50%;
-  }
-
-#search-input {
-    width: 15vw;
-    background-color:#f0ff00;
-    font-family: 'JetBrains Mono', monospace;
-    border: 3px solid #ffffff;
-    color: black;
-    letter-spacing: 5px;
-    font-weight: 800;
-    padding: 0;
 }
 
-.image {
-    opacity: 1;
-    display: block;
-    width: 100%;
-    height: auto;
-    transition: .5s ease;
-    backface-visibility: hidden;
-    border-radius: 12px;
-    z-index: 3;
-  }
+#search-input {
+    width: 40%;
+    background-color:#f0ff00;
+    border: 3px solid #ffffff;
+    letter-spacing: 5px;
+    font-weight: 600;
+    text-align: center;
+    margin-top: -4.5rem;
+}
 
-.image:hover {
-    opacity: 0.3;
-    cursor: pointer;
-    font-family: 'JetBrains Mono', monospace;
-  }
-
-.carousel-inner{
+.carousel-inner {
       background-color:#bc0e29;
-      font-family: 'JetBrains Mono', monospace;
   }
 
 .carousel-item {
       height:550px;
-      /* margin-bottom: 10px; */
-      font-family: 'JetBrains Mono', monospace;
   }
 
 .carousel-item img {
@@ -63,57 +38,64 @@ body{
       min-height: 500px;
       height:300px;
       object-fit: cover;
-      font-family: 'JetBrains Mono', monospace;
   }
 
-.center {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    text-align: center;
+.mar-center {
     font-size: 18px;
+    margin-top: 2.5rem;
+    display: flex;
+    justify-content: center;
   }
 
-.martop{
-    margin-top: 100px;
-    font-family: 'JetBrains Mono', monospace; 
-    max-height: 300px;
-    margin-bottom: 100px;
-    text-align: center;
+.carousel-margin {
+    margin-top: .5rem;
+    max-height: 20rem;
+    margin-bottom: 20rem;
 }
 
-
-.marsearch{
-    margin-top: 50px;
-    justify-content: center;
-    font-family: 'JetBrains Mono', monospace;
-
-}
-
-.btn{
-    align-content: center;
-    margin-top:15px;
-    background-color:#f0ff00;
-    font-family: 'JetBrains Mono', monospace; 
-    border: 3px solid #ffffff;
-    letter-spacing: 5px;
-
-}
-.h1{
+.browse-by-style {
     text-align: center;
     letter-spacing: 5px;
     color: #ffffff;
     font-weight: 800;
+    margin-bottom: 3rem;
 }
+
+.image {
+    opacity: 1;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    border-radius: 12px;
+}
+
+.image:hover {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+.shoe-style-btn {
+    width: 50%;
+    /* display: flex;
+    justify-content: center; */
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background-color:#f0ff00;
+    border: 3px solid #ffffff;
+    letter-spacing: 5px;
+    font-weight: 600;
+}
+
+
 @media only screen and (max-width: 1280px) {
-    .martop {
+    .carousel-margin {
         margin-top: 50px;
         margin-bottom: 50px;
     }
 }
 
 @media only screen and (max-width: 1024) {
-    .martop {
+    .carousel-margin {
         margin-top: 50px;
         margin-bottom: 50px;
     }
