--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;1,400;1,600;1,800&display=swap');
 
 .logo {
     padding: 4rem;
@@ -8,7 +7,7 @@
 body {
     background-image: url("../assets/background/back2.png");
     background-size: cover;
-    font-family: 'JetBrains Mono', monospace;
+    font-family: 'FontAwesome','JetBrains Mono', monospace;
 }
 
 .form-control::-webkit-input-placeholder {
@@ -22,9 +21,11 @@ body {
     letter-spacing: 5px;
     font-weight: 600;
     text-align: center;
-    margin-top: -4.5rem;
+    margin-top: -4rem;
 }
 
+
+  
 .carousel-inner {
       background-color:#bc0e29;
   }
@@ -48,9 +49,9 @@ body {
   }
 
 .carousel-margin {
-    margin-top: .5rem;
+    margin-top: 1rem;
     max-height: 20rem;
-    margin-bottom: 20rem;
+    margin-bottom: 18rem;
 }
 
 .browse-by-style {
@@ -75,9 +76,7 @@ body {
 }
 
 .shoe-style-btn {
-    width: 50%;
-    /* display: flex;
-    justify-content: center; */
+    width: 60%;
     margin-top: 1rem;
     margin-bottom: 1rem;
     background-color:#f0ff00;
@@ -86,8 +85,14 @@ body {
     font-weight: 600;
 }
 
+.bottom-browse-by-style-div {
+    margin-top: 2rem;
+    margin-bottom: 5rem;
+}
 
-@media only screen and (max-width: 1280px) {
+
+
+/* @media only screen and (max-width: 1280px) {
     .carousel-margin {
         margin-top: 50px;
         margin-bottom: 50px;
@@ -99,4 +104,4 @@ body {
         margin-top: 50px;
         margin-bottom: 50px;
     }
-}
+} */
