--- a/public/css/search.css
+++ b/public/css/search.css
@@ -67,10 +67,11 @@ span {
 
 .submit {
     background-color: #f0ff00;
-    border: 0.2px solid black;
-    border-radius: 5px;
+    border: 1px solid black;
+    border-radius: 10px;
     margin-left: 12px;
     margin-top: 10px;
+    font-weight: 600;
 }
 
 .shoe{
