--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,7 +1,47 @@
+/* .navbar {
+    overflow: hidden;
+    background-image: url("../assets/background/back2.png");
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 15%;
+    z-index:1;
+} */
+
+body {
+    background-image: url("../assets/background/back2.png");
+    background-attachment: fixed;
+
+}
+
+#logo {
+    height: 12rem;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+}
+
+.sidenav {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    /* background-image: url("../assets/background/back2.png");
+    overflow-x: hidden;
+    padding-top: 20px; */
+  }
+
+
+
+
+
 .main-content {
+    background-color: white;
     font-family: 'JetBrains Mono', monospace;
     text-align: center;
-    margin-top: 7rem;
+    padding: 5rem;
 }
 
 h2 {
@@ -12,7 +52,7 @@ h2 {
     /* margin-bottom: -1rem; */
 }
 
-img {
+#image {
     overflow: hidden;
     max-width:100%;
     max-height:100%;
@@ -21,13 +61,18 @@ img {
 }
 
 .shoe-info {
-  padding-top: 4rem;
-  line-height: 2.3;
-  font-size: large;  
+  padding: 1rem;
+  line-height: 2;
+  font-size: large; 
+  background-color: #f6f6f6; 
+  margin: 2rem;
 }
 
 #desc {
     margin-top: 3rem;
+    /* background-color: #f6f6f6; 
+    padding: 1rem; */
+
 }
 
 
@@ -37,7 +82,8 @@ img {
 .rating {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: center
+    justify-content: center;
+    margin-top: -2rem;
 }
 
 .rating>input {
@@ -48,7 +94,7 @@ img {
     position: relative;
     width: 1em;
     font-size: 6vw;
-    color: #FFD600;
+    color: #f0ff00;
     cursor: pointer
 }
 
@@ -72,4 +118,17 @@ img {
 }
 
 
+#comment-button-input {
+    width: 60%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background-color:#f0ff00;
+    border: 3px solid #ffffff;
+    letter-spacing: 5px;
+    font-weight: 600;
+    border-radius: 20px;
+}
 
+.comment-section {
+    margin-top: 5rem;
+}
