--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,40 +1,22 @@
-/* .navbar {
-    overflow: hidden;
-    background-image: url("../assets/background/back2.png");
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 15%;
-    z-index:1;
-} */
-
 body {
     background-image: url("../assets/background/back2.png");
     background-attachment: fixed;
-
 }
 
 #logo {
     height: 12rem;
     padding: 2rem;
-    display: flex;
-    justify-content: center;
+    margin-left: 1rem;
 }
 
 .sidenav {
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 0;
     top: 0;
     left: 0;
-    /* background-image: url("../assets/background/back2.png");
-    overflow-x: hidden;
-    padding-top: 20px; */
-  }
-
-
-
+}
 
 
 .main-content {
@@ -47,16 +29,12 @@ body {
 h2 {
     font-weight: 800;
     width: 100%;
-    /* text-align: right; */
-    /* margin-top: 7rem; */
-    /* margin-bottom: -1rem; */
 }
 
 #image {
     overflow: hidden;
     max-width:100%;
     max-height:100%;
-    /* position: relative; */
     z-index:-1;
 }
 
@@ -69,13 +47,8 @@ h2 {
 }
 
 #desc {
-    margin-top: 3rem;
-    /* background-color: #f6f6f6; 
-    padding: 1rem; */
-
+    margin-top: 3rem;   
 }
-
-
 
 /* Ratings */
 
